# trios

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  Copyright.txt  Doxyfile  Doxyfile.in  LICENSE  MANIFEST.in  README.md  README.txt  mkdocs.yml  requirements.txt  setup.py
docs/: Makefile  aperture.rst  classification-methods.rst  classification.rst  conf.py  examples.md  feature-extraction-methods.rst  feature-extraction.rst  getting-started-with-trioslib.ipynb  index.md  index.rst  make.bat  mathjax-config.js  publications-using-trioslib.md  publications-using-trioslib.rst  training-sets.rst  training-w-operators.rst  two-level-operators.rst
docs/examples/: citing_trained_operators.py  creating_and_saving_imageset.py  creating_image_transforms.py  creating_windows.py  download_jung_images.py  evaluation_functions.py  performance_report.py  using_trained_operator.py  using_woperator_eval.py
docs/methods/: ISI.md  aperture.md  fourier.md  hog.md  ka.md  lbp.md  moments.md  nilc.md  sobel.md  two-level.md
docs/user-guide/: advanced_methods.md  introduction.md  (+5 more)
python/: win.build.gg
site/: deploy.sh  pelicanconf.py
test/: Keras_Test.py  Keras_test.py  Lasagne_test.py  XgBoost_test.py  aperture_test.py  basic_test.py  combination_test.py  download_test_images.py  fourier_test.py  hog_test.py  imageset.py  isi_test.py  lbp_test.py  moments_test.py  run_all.py  serialization_test.py  sobel_test.py  two_level_test.py
tools/: migrate_saved_files_to_21.py
trios/: WOperator.pxd  WOperator.py  WOperator.pyx  __init__.py  imageset.py  serializable.pxd  serializable.pyx  test_apply.py  util.pxd  util.pyx  wop_matrix_ops.c  wop_matrix_ops.pxd  wop_matrix_ops.pyx  woperator.py
trios-auto/: fileutils.cpp  fileutils.h  main.cpp  misc.h  trios_to_qml.cpp  trios_to_qml.h  triosauto.desktop  triosauto.pro  triosauto_harmattan.desktop  triosinterface.cpp  triosinterface.h  wheel_area.h
trioslib/: CMakeLists.txt
trioslib/include/: CMakeLists.txt  io_header.h  pac_apert.h  pac_error.h  pac_img.h  pac_imgset.h  pac_itv.h  pac_kernel.h  pac_mtm.h  pac_show.h  pac_xpl.h  pacappl.h  pacbasic.h  pacio.h  paclearn.h  paclib.h  paclib_kernel.h  trios.h  trios_apert.h  trios_appl.h  trios_collec.h  trios_common.h  trios_dt.h  trios_error.h  trios_fs.h  trios_img.h  trios_imgset.h  trios_io.h  trios_itv.h  trios_learn.h  trios_misc.h  trios_mtm.h  trios_multi.h  trios_operator.h  trios_win.h  trios_win_selection.h  trios_xpl.h  xpl_collec.h
trioslib/src/: CMakeLists.txt
trioslib/src/appl/: CMakeLists.txt  appl.c  appl_bb.c  appl_gg.c  appl_multi.c  appl_wk.c  local.h  operator.c
trioslib/src/basic/: CMakeLists.txt  basic_apert.c  basic_cmp.c  basic_cmp.c~  basic_common.c  basic_error.c  basic_img.c  basic_imgset.c  basic_itv.c  basic_itv.c~  basic_math.c  basic_mtm.c  basic_multi.c  basic_win.c  basic_xpl.c  basic_xplBB.c  basic_xplGG.c  common.c  common.h  imgset.c  mtm.c  pac_cmp.c  pac_img.c  pac_itv.c  pac_mtm.c  pac_show.c  pac_win.c  win.c  xpl.c  xplBB.c
trioslib/src/basic/basic_dt/: compute_impurity.c  impurity_measures.c  tree_util.c
trioslib/src/collec/: CMakeLists.txt  collec_private.h  collec_two_level.c  collec_xpl.c  collec_xpl_apert.c  collec_xpl_bb.c  collec_xpl_gg.c  collec_xpl_multi_level.c  collec_xpl_threshold.c  collec_xpl_wk.c
trioslib/src/io/: CMakeLists.txt  internals.h  io_apert.c  io_dt.c  io_header.c  io_img.c  io_imgset.c  io_itv.c  io_local.h  io_mtm.c  io_multi.c  io_operator.c  io_showxpl.c  io_tree.c  io_win.c  io_xpl.c  io_xpl_swt.c  pacio_local.h
trioslib/src/learn/: CMakeLists.txt  accuracy.c  decision.c  decision_bb.c  decision_gg.c  dp_isi.c  dpac_mtm.c  ip_group.c  ip_isi.c  ip_mincover.c  ipac_mtm.c  mae.c  multi_level.c  operator.c  paclearn_local.h  partition.c  train_gg.c
trioslib/src/learn/learn_dt/: appl_gg.c  compute_impurity.c  io_dt.c  local.h  mktree.c  pacdt_local.h  perturb.c  tree_util.c
trioslib/src/learn/opencv_tree_code/: apply.cpp  opencv_interface.h  training.cpp
trioslib/src/mm/: CMakeLists.txt
trioslib/src/opencv_interface/: CMakeLists.txt  apply.cpp  classifier_io.cpp  opencv_interface.h  training.cpp
trioslib/src/pacappl/: CMakeLists.txt  dpac_appl.c  ipac_appl.c
trioslib/src/pacbasic/: CMakeLists.txt  pac_cmp.c  pac_common.c  pac_error.c  pac_img.c  pac_imgset.c  pac_math.c  pac_mtm.c  pac_xpl.c
trioslib/src/pacio/: CMakeLists.txt  io_img.c  io_itv.c  io_showxpl.c
trioslib/src/paclearn/: CMakeLists.txt  dp_group.c  dp_isi.c  ip_isi.c  ip_mincover.c  ipac_mtm.c  paclearn_local.h
trioslib/src/pacmm/: CMakeLists.txt  pac_xpl_collec.c  trios_xpl_collec.c
trioslib/src/window_selection/: CMakeLists.txt  martins_barrera.c  mutual_information.c  relief.c  reliefBB.c  relief_bb.c  two_level_relief_icpr14.c  util.c
trioslib/test/: CMakeLists.txt  README.txt  minunit.h  pac_collec_test.c  pac_img_test.c  pac_xpl_test.c  runner.h  test_read_win.txt  trios_apert_test.c  trios_applic_test.c  trios_collec_test.c  trios_collec_threshold_test.c  trios_decision_test.c  trios_group_test.c  trios_img_test.c  trios_isi_test.c  trios_multi_level_test.c  trios_operator_test.c  trios_win_selection_test.c  trios_win_test.c  trios_xpl_test.c
trioslib/test/jung9x7/: bas1.1.bas  bas1.3.bas  bas1.4.bas  base.bas  jung-10a.pgm  jung-11a.pgm  jung-11b.pgm  jung-12b.pgm  jung-14a.pgm  jung-2b.pgm  jung-3a.pgm  jung-3b.pgm  jung-4a.pgm  jung-4b.pgm  jung-5b.pgm  jung-6b.pgm  jung-9a.pgm  jung-9b.pgm  jung-s-11a.pgm  jung-s-11b.pgm  jung-s-12a.pgm  jung-s-13a.pgm  jung-s-13b.pgm  jung-s-14a.pgm  jung-s-15a.pgm  jung-s-2a.pgm  jung-s-2b.pgm  jung-s-4b.pgm  jung-s-6b.pgm  jung-s-7a.pgm  jung-s-8a.pgm  jung-s-9a.pgm  jung-s-9b.pgm  level2.set
trioslib/test/test_img/: ideal-einstein.pnm  ideal1.pgm  ideal1_GG.pnm  ideal2.pgm  ideal3.pgm  input1-einstein.pnm  input1.pgm  input1_GG.pnm  input2-einstein.pnm  input2.pgm  input3.pgm  small-ideal.pgm  small.pgm  test_read.pgm
trioslib/tools/: CMakeLists.txt  trios_apply.c  trios_build.c  trios_collec.c  trios_csv.c  trios_relief.c  trios_test.c  trios_win_select.c  trios_xpl_util.c
(+183 files in other folders)
