PROJECT(TRIOSLIB)
SET(TRIOSLIB_INCLUDE_DIR ./include)
INCLUDE_DIRECTORIES(${TRIOSLIB_INCLUDE_DIR} )

#SET(CMAKE_BUILD_TYPE debug)

find_package(OpenCV)
find_package(OpenMP)

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${TRIOS_REQUIRED_C_FLAGS} ${OpenMP_C_FLAGS} -fopenmp")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${TRIOS_REQUIRED_CXX_FLAGS}")
SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${TRIOS_REQUIRED_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS} -fopenmp")


SUBDIRS(include src test tools)

